--- a/deploy/docker/clickhouse-setup/docker-compose.yaml
+++ b/deploy/docker/clickhouse-setup/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: "2.4"
-
 x-clickhouse-defaults: &clickhouse-defaults
   restart: on-failure
   # addding non LTS version due to this fix https://github.com/ClickHouse/ClickHouse/commit/32caf8716352f45c1b617274c7508c86b7d1afab
@@ -15,14 +13,7 @@ x-clickhouse-defaults: &clickhouse-defaults
       max-file: "3"
   healthcheck:
     # "clickhouse", "client", "-u ${CLICKHOUSE_USER}", "--password ${CLICKHOUSE_PASSWORD}", "-q 'SELECT 1'"
-    test:
-      [
-        "CMD",
-        "wget",
-        "--spider",
-        "-q",
-        "0.0.0.0:8123/ping"
-      ]
+    test: ["CMD", "wget", "--spider", "-q", "0.0.0.0:8123/ping"]
     interval: 30s
     timeout: 5s
     retries: 3
@@ -44,7 +35,6 @@ x-db-depend: &db-depend
     #   condition: service_healthy
 
 services:
-
   zookeeper-1:
     image: bitnami/zookeeper:3.7.1
     container_name: signoz-zookeeper-1
@@ -130,7 +120,6 @@ services:
   #     - ./data/clickhouse-2/:/var/lib/clickhouse/
   #     - ./user_scripts:/var/lib/clickhouse/user_scripts/
 
-
   # clickhouse-3:
   #   <<: *clickhouse-defaults
   #   container_name: signoz-clickhouse-3
@@ -166,9 +155,8 @@ services:
   query-service:
     image: signoz/query-service:${DOCKER_TAG:-0.49.1}
     container_name: signoz-query-service
-    command:
-      [
-        "-config=/root/config/prometheus.yml"
+    command: [
+        "-config=/root/config/prometheus.yml",
         # "--prefer-delta=true"
       ]
     # ports:
@@ -189,14 +177,7 @@ services:
       - DEPLOYMENT_TYPE=docker-standalone-amd
     restart: on-failure
     healthcheck:
-      test:
-        [
-          "CMD",
-          "wget",
-          "--spider",
-          "-q",
-          "localhost:8080/api/v1/health"
-        ]
+      test: ["CMD", "wget", "--spider", "-q", "localhost:8080/api/v1/health"]
       interval: 30s
       timeout: 5s
       retries: 3
@@ -227,7 +208,6 @@ services:
       # clickhouse-3:
       #   condition: service_healthy
 
-
   otel-collector:
     image: signoz/signoz-otel-collector:${OTELCOL_TAG:-0.102.2}
     container_name: signoz-otel-collector
@@ -236,7 +216,7 @@ services:
         "--config=/etc/otel-collector-config.yaml",
         "--manager-config=/etc/manager-config.yaml",
         "--copy-path=/var/tmp/collector-config.yaml",
-        "--feature-gates=-pkg.translator.prometheus.NormalizeName"
+        "--feature-gates=-pkg.translator.prometheus.NormalizeName",
       ]
     user: root # required for reading docker container logs
     volumes:
@@ -279,29 +259,3 @@ services:
     depends_on:
       - otel-collector
     restart: on-failure
-
-  hotrod:
-    image: jaegertracing/example-hotrod:1.30
-    container_name: hotrod
-    logging:
-      options:
-        max-size: 50m
-        max-file: "3"
-    command: [ "all" ]
-    environment:
-      - JAEGER_ENDPOINT=http://otel-collector:14268/api/traces
-
-  load-hotrod:
-    image: "signoz/locust:1.2.3"
-    container_name: load-hotrod
-    hostname: load-hotrod
-    environment:
-      ATTACKED_HOST: http://hotrod:8080
-      LOCUST_MODE: standalone
-      NO_PROXY: standalone
-      TASK_DELAY_FROM: 5
-      TASK_DELAY_TO: 30
-      QUIET_MODE: "${QUIET_MODE:-false}"
-      LOCUST_OPTS: "--headless -u 10 -r 1"
-    volumes:
-      - ../common/locust-scripts:/locust
